# mpc-feedstock

recipe/: README.md  bld.bat  build.sh  meta.yaml  test.c
recipe/win_build/: CMakeLists.txt  mpc.pc.in
recipe/win_build/src/: CMakeLists.txt  config.h.in
recipe/win_build/tests/: CMakeLists.txt
recipe/win_build/tools/bench/: CMakeLists.txt
